; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_get_bool.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..libretro-commonfileconfig_file.c_config_get_bool.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.config_entry_list = type { i32 }

@.str = private unnamed_addr constant [5 x i8] c"true\00", align 1
@.str.1 = private unnamed_addr constant [2 x i8] c"1\00", align 1
@.str.2 = private unnamed_addr constant [6 x i8] c"false\00", align 1
@.str.3 = private unnamed_addr constant [2 x i8] c"0\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @config_get_bool(i32* %0, i8* %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.config_entry_list*, align 8
  store i32* %0, i32** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = load i32*, i32** %5, align 8
  %10 = load i8*, i8** %6, align 8
  %11 = call %struct.config_entry_list* @config_get_entry(i32* %9, i8* %10, i32* null)
  store %struct.config_entry_list* %11, %struct.config_entry_list** %8, align 8
  %12 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %13 = icmp ne %struct.config_entry_list* %12, null
  br i1 %13, label %14, label %51

14:                                               ; preds = %3
  %15 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %16 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i64 @string_is_equal(i32 %17, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %14
  %21 = load i32*, i32** %7, align 8
  store i32 1, i32* %21, align 4
  br label %50

22:                                               ; preds = %14
  %23 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %24 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i64 @string_is_equal(i32 %25, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %27 = icmp ne i64 %26, 0
  br i1 %27, label %28, label %30

28:                                               ; preds = %22
  %29 = load i32*, i32** %7, align 8
  store i32 1, i32* %29, align 4
  br label %49

30:                                               ; preds = %22
  %31 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %32 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = call i64 @string_is_equal(i32 %33, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.2, i64 0, i64 0))
  %35 = icmp ne i64 %34, 0
  br i1 %35, label %36, label %38

36:                                               ; preds = %30
  %37 = load i32*, i32** %7, align 8
  store i32 0, i32* %37, align 4
  br label %48

38:                                               ; preds = %30
  %39 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %40 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %39, i32 0, i32 0
  %41 = load i32, i32* %40, align 4
  %42 = call i64 @string_is_equal(i32 %41, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.3, i64 0, i64 0))
  %43 = icmp ne i64 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %38
  %45 = load i32*, i32** %7, align 8
  store i32 0, i32* %45, align 4
  br label %47

46:                                               ; preds = %38
  store i32 0, i32* %4, align 4
  br label %55

47:                                               ; preds = %44
  br label %48

48:                                               ; preds = %47, %36
  br label %49

49:                                               ; preds = %48, %28
  br label %50

50:                                               ; preds = %49, %20
  br label %51

51:                                               ; preds = %50, %3
  %52 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  %53 = icmp ne %struct.config_entry_list* %52, null
  %54 = zext i1 %53 to i32
  store i32 %54, i32* %4, align 4
  br label %55

55:                                               ; preds = %51, %46
  %56 = load i32, i32* %4, align 4
  ret i32 %56
}

declare dso_local %struct.config_entry_list* @config_get_entry(i32*, i8*, i32*) #1

declare dso_local i64 @string_is_equal(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
